Envia dos tokens para confirmar la cuenta, cambiarlo!

--- a/Fun/email_content/confirmation_mail.html
+++ b/Fun/email_content/confirmation_mail.html
@@ -5,7 +5,7 @@
     <body>
 
             <br>
-            <H1>CONFIRMATION EMAIL</H1>
+            <H1>CONFIRMATION MAIL</H1>
 
             <H4> Please, click at the link below to validate the account:</H4>
             <br>
