Funciona la parte de la recuperacion de las contraseñas y creacion de nuevos usuarios

--- a/Fun/email_content/confirmation_mail.html
+++ b/Fun/email_content/confirmation_mail.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-            <title>Confirmation email </title>
+            <title>Confirmation mail </title>
     </head>
     <body>
 
