--- a/Fun/email_content/is_know_mail.html
+++ b/Fun/email_content/is_know_mail.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-            <title>Confirmation email </title>
+            <title>is know mail </title>
     </head>
     <body>
 
             <br>
-            <H1>IS KNOW USER EMAIL</H1>
+            <H1>IS KNOW USER MAIL</H1>
 
             <H4> Please, click at the link below to validate the account:</H4>
             <br>
