--- a/Fun/email_content/recuperation_mail.html
+++ b/Fun/email_content/recuperation_mail.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-            <title> Recuperation email </title>
+            <title> Recuperation mail </title>
     </head>
     <body>
 
             <br>
-            <H1>CHANGE PASSWORD EMAIL</H1>
+            <H1>CHANGE PASSWORD MAIL</H1>
 
             <H4> Please, click at the link below to change your password:</H4>
             <br>
